fix(c): 修复 Java 23 下 Lombok 不兼容及 Gateway 启动失败